--- a/covered.html
+++ b/covered.html
@@ -7,7 +7,7 @@
     <style>
     <style>
         body {
-            font-family: Avenir, sans-serif;
+            font-family: "Avenir", sans-serif;
             margin: 0; /* Eliminamos márgenes predeterminados */
         }
         .container {
