--- a/covered.html
+++ b/covered.html
@@ -103,7 +103,7 @@
         <div id="selectReportContainer">
             <h2>Select Report</h2>
             <select id="reportSelect" onchange="changeReport()">
-                <option value>Choose...</option>
+                <option value="">Choose...</option>
                 <option value="quarterly">Quarterly</option>
                 <option value="monthly">Monthly</option>
                 <!-- Agrega más opciones de informes aquí -->
