--- a/covered.html
+++ b/covered.html
@@ -7,7 +7,7 @@
     <style>
     <style>
         body {
-            font-family: "Avenir";
+            font-family: Avenir;
             margin: 0; /* Eliminamos márgenes predeterminados */
         }
         .container {
