--- a/covered.html
+++ b/covered.html
@@ -6,7 +6,7 @@
     <link rel="icon" href="https://play-lh.googleusercontent.com/p8n-LjuwErRjEWDJh53wEwL_jDccfmDMXB547j_qifRJ_VWf0ofZ33l7sOMvxZtO0w=w600-h300-pc0xffffff-pd">
     <style>
         body {
-            font-family: Avenir;
+            font-family: Gill Sans;
             margin: 0; /* Eliminamos márgenes predeterminados */
         }
         .container {
