Market_Update.html

--- a/Market_Update.html
+++ b/Market_Update.html
@@ -86,7 +86,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <img src="https://play-lh.googleusercontent.com/p8n-LjuwErRjEWDJh53wEwL_jDccfmDMXB547j_qifRJ_VWf0ofZ33l7sOMvxZtO0w=w600-h300-pc0xffffff-pd">
+            <img src="https://yt3.googleusercontent.com/ytc/AOPolaS4tp4U-dAeESAxOkBlk1rt1Yei7GbutKCm5aCd=s900-c-k-c0x00ffffff-no-rj">
             <h1>Weekly Market Update</h1>
         </div>
 
@@ -103,8 +103,9 @@
             <h2>Select Report</h2>
             <select id="reportSelect" onchange="changeReport()">
                 <option value="">Choose...</option>
-                <option value="quarterly">Quarterly</option>
-                <option value="monthly">Monthly</option>
+                <option value="quarterly">Bonos soberanos</option>
+                <option value="monthly">Tipos de interés</option>
+                <option value="monthly">Índice de crédito y variaciones</option>
                 <!-- Agrega más opciones de informes aquí -->
             </select>
             <button onclick="closeSelectReportContainer()">Go</button>
@@ -112,9 +113,9 @@
 
         <!-- Contenedor para Abanca Corporativo Completo Quarter -->
         <div id="quarterlyContainer" style="display: none;">
-            <h2 class="presentation-title">Cover Pool Quarterly Information<a class="download-button" href="https://acgalacapital-my.sharepoint.com/personal/fortiz_bekafinance_com/Documents/Escritorio/Abanca/Microsoft-Power-BI-Storytelling.pptx?web=1" download><img src="https://static.vecteezy.com/system/resources/previews/001/187/075/non_2x/download-png.png"></a></h2>
+            <h2 class="presentation-title">Bonos soberanos<a class="download-button" href="https://acgalacapital-my.sharepoint.com/personal/fortiz_bekafinance_com/Documents/Escritorio/Abanca/Microsoft-Power-BI-Storytelling.pptx?web=1" download><img src="https://static.vecteezy.com/system/resources/previews/001/187/075/non_2x/download-png.png"></a></h2>
             <div id="iframeContainer">
-                <iframe title="Cover Pool - Quarterly Information"
+                <iframe title="Bonos soberanos"
                         src="https://app.powerbi.com/reportEmbed?reportId=81ee266a-2799-4577-bba8-8f96aa531bdf&autoAuth=true&ctid=2788b953-1971-4b82-9986-b668acbd5846"
                         frameborder="0"
                         allowFullScreen="true">
@@ -123,9 +124,9 @@
         </div>
         <!-- Contenedor para Abanca Corporativo Completo Month -->
         <div id="monthlyContainer" style="display: none;">
-            <h2 class="presentation-title">Cover Pool Monthly Information<a class="download-button" href="https://acgalacapital-my.sharepoint.com/personal/fortiz_bekafinance_com/Documents/Escritorio/Abanca/Microsoft-Power-BI-Storytelling.pptx?web=1" download><img src="https://static.vecteezy.com/system/resources/previews/001/187/075/non_2x/download-png.png"></a></h2>
+            <h2 class="presentation-title">Tipos de interés<a class="download-button" href="https://acgalacapital-my.sharepoint.com/personal/fortiz_bekafinance_com/Documents/Escritorio/Abanca/Microsoft-Power-BI-Storytelling.pptx?web=1" download><img src="https://static.vecteezy.com/system/resources/previews/001/187/075/non_2x/download-png.png"></a></h2>
             <div id="iframeContainer">
-                <iframe title="Cover Pool - Monthly Information"
+                <iframe title="Tipos de interés"
                         src="https://app.powerbi.com/reportEmbed?reportId=0fc44c3d-8e91-4312-8000-b10d3dc820bd&autoAuth=true&ctid=2788b953-1971-4b82-9986-b668acbd5846"
                         frameborder="0"
                         allowFullScreen="true">
