--- a/Market_Update.html
+++ b/Market_Update.html
@@ -103,16 +103,16 @@
             <h2>Select Report</h2>
             <select id="reportSelect" onchange="changeReport()">
                 <option value="">Choose...</option>
-                <option value="quarterly">Bonos soberanos</option>
-                <option value="monthly">Tipos de interés</option>
-                <option value="monthly">Índice de crédito y variaciones</option>
+                <option value="bonos">Bonos soberanos</option>
+                <option value="tipos">Tipos de interés</option>
+                <option value="variaciones">Índice de crédito y variaciones</option>
                 <!-- Agrega más opciones de informes aquí -->
             </select>
             <button onclick="closeSelectReportContainer()">Go</button>
         </div>
 
         <!-- Contenedor para Abanca Corporativo Completo Quarter -->
-        <div id="quarterlyContainer" style="display: none;">
+        <div id="bonosContainer" style="display: none;">
             <h2 class="presentation-title">Bonos soberanos<a class="download-button" href="https://acgalacapital-my.sharepoint.com/personal/fortiz_bekafinance_com/Documents/Escritorio/Abanca/Microsoft-Power-BI-Storytelling.pptx?web=1" download><img src="https://static.vecteezy.com/system/resources/previews/001/187/075/non_2x/download-png.png"></a></h2>
             <div id="iframeContainer">
                 <iframe title="Bonos soberanos"
@@ -123,7 +123,7 @@
             </div>
         </div>
         <!-- Contenedor para Abanca Corporativo Completo Month -->
-        <div id="monthlyContainer" style="display: none;">
+        <div id="tiposContainer" style="display: none;">
             <h2 class="presentation-title">Tipos de interés<a class="download-button" href="https://acgalacapital-my.sharepoint.com/personal/fortiz_bekafinance_com/Documents/Escritorio/Abanca/Microsoft-Power-BI-Storytelling.pptx?web=1" download><img src="https://static.vecteezy.com/system/resources/previews/001/187/075/non_2x/download-png.png"></a></h2>
             <div id="iframeContainer">
                 <iframe title="Tipos de interés"
@@ -133,7 +133,17 @@
                 </iframe>
             </div>
         </div>
-
+        <!-- Contenedor para Abanca Corporativo Completo Month -->
+        <div id="variacionesContainer" style="display: none;">
+            <h2 class="presentation-title">Tipos de interés<a class="download-button" href="https://acgalacapital-my.sharepoint.com/personal/fortiz_bekafinance_com/Documents/Escritorio/Abanca/Microsoft-Power-BI-Storytelling.pptx?web=1" download><img src="https://static.vecteezy.com/system/resources/previews/001/187/075/non_2x/download-png.png"></a></h2>
+            <div id="iframeContainer">
+                <iframe title="Tipos de interés"
+                        src="https://app.powerbi.com/reportEmbed?reportId=0fc44c3d-8e91-4312-8000-b10d3dc820bd&autoAuth=true&ctid=2788b953-1971-4b82-9986-b668acbd5846"
+                        frameborder="0"
+                        allowFullScreen="true">
+                </iframe>
+            </div>
+        </div>
         <script>
             var passwordEntered = false; // Variable para saber si se ha introducido correctamente la contraseña
 
@@ -158,12 +168,18 @@
             function changeReport() {
                 var reportSelect = document.getElementById("reportSelect");
                 var selectedReport = reportSelect.value;
-                if (selectedReport === "quarterly") {
-                    document.getElementById("quarterlyContainer").style.display = "block";
-                    document.getElementById("monthlyContainer").style.display = "none";
-                } else if (selectedReport === "monthly") {
-                    document.getElementById("quarterlyContainer").style.display = "none";
-                    document.getElementById("monthlyContainer").style.display = "block";
+                if (selectedReport === "bonos") {
+                    document.getElementById("bonosContainer").style.display = "block";
+                    document.getElementById("tiposContainer").style.display = "none";
+                    document.getElementById("variacionesContainer").style.display = "none";
+                } else if (selectedReport === "tipos") {
+                    document.getElementById("bonosContainer").style.display = "none";
+                    document.getElementById("tiposContainer").style.display = "block";
+                    document.getElementById("variacionesContainer").style.display = "none";
+                } else if (selectedReport === "variaciones") {
+                    document.getElementById("bonosContainer").style.display = "none";
+                    document.getElementById("tiposContainer").style.display = "none";
+                    document.getElementById("variacionesContainer").style.display = "block";
                 }
             }
 
