Market_Update.html

--- a/Market_Update.html
+++ b/Market_Update.html
@@ -76,7 +76,7 @@
             margin-top: 10px;
         }
         /* Estilos para los contenedores de informes */
-        #quarterlyContainer, #monthlyContainer {
+        #bonosContainer, #tiposContainer, #variacionesContainer {
             width: calc(100% - 40px);
             margin: 20px;
             margin-bottom: 70px; /* Agregar margen inferior de 50px */
