Market_Update.html

--- a/Market_Update.html
+++ b/Market_Update.html
@@ -103,8 +103,9 @@
             <h2>Select Report</h2>
             <select id="reportSelect" onchange="changeReport()">
                 <option value="">Choose...</option>
-                <option value="bonos">Bonos soberanos</option>
-                <option value="tipos">Tipos de interés</option>
+                <option value="noticias">News</option>
+                <option value="bonos">Sovereign bonds</option>
+                <option value="tipos">Interest rates</option>
                 <option value="variaciones">Índice de crédito y variaciones</option>
                 <!-- Agrega más opciones de informes aquí -->
             </select>
@@ -113,9 +114,9 @@
 
         <!-- Contenedor para Abanca Corporativo Completo Quarter -->
         <div id="bonosContainer" style="display: none;">
-            <h2 class="presentation-title">Bonos soberanos<a class="download-button" href="https://acgalacapital-my.sharepoint.com/personal/fortiz_bekafinance_com/Documents/Escritorio/Abanca/Microsoft-Power-BI-Storytelling.pptx?web=1" download><img src="https://static.vecteezy.com/system/resources/previews/001/187/075/non_2x/download-png.png"></a></h2>
+            <h2 class="presentation-title">Sovereign bonds<a class="download-button" href="https://acgalacapital-my.sharepoint.com/personal/fortiz_bekafinance_com/Documents/Escritorio/Abanca/Microsoft-Power-BI-Storytelling.pptx?web=1" download><img src="https://static.vecteezy.com/system/resources/previews/001/187/075/non_2x/download-png.png"></a></h2>
             <div id="iframeContainer">
-                <iframe title="Bonos soberanos"
+                <iframe title="Sovereign bonds"
                         src="https://app.powerbi.com/reportEmbed?reportId=81ee266a-2799-4577-bba8-8f96aa531bdf&autoAuth=true&ctid=2788b953-1971-4b82-9986-b668acbd5846"
                         frameborder="0"
                         allowFullScreen="true">
@@ -124,9 +125,9 @@
         </div>
         <!-- Contenedor para Abanca Corporativo Completo Month -->
         <div id="tiposContainer" style="display: none;">
-            <h2 class="presentation-title">Tipos de interés<a class="download-button" href="https://acgalacapital-my.sharepoint.com/personal/fortiz_bekafinance_com/Documents/Escritorio/Abanca/Microsoft-Power-BI-Storytelling.pptx?web=1" download><img src="https://static.vecteezy.com/system/resources/previews/001/187/075/non_2x/download-png.png"></a></h2>
+            <h2 class="presentation-title">Interest rates<a class="download-button" href="https://acgalacapital-my.sharepoint.com/personal/fortiz_bekafinance_com/Documents/Escritorio/Abanca/Microsoft-Power-BI-Storytelling.pptx?web=1" download><img src="https://static.vecteezy.com/system/resources/previews/001/187/075/non_2x/download-png.png"></a></h2>
             <div id="iframeContainer">
-                <iframe title="Tipos de interés"
+                <iframe title="Interest rates"
                         src="https://app.powerbi.com/reportEmbed?reportId=0fc44c3d-8e91-4312-8000-b10d3dc820bd&autoAuth=true&ctid=2788b953-1971-4b82-9986-b668acbd5846"
                         frameborder="0"
                         allowFullScreen="true">
