--- a/covered.html
+++ b/covered.html
@@ -115,7 +115,7 @@
             <h2 class="presentation-title">Cover Pool Quarterly Information<a class="download-button" href="https://acgalacapital-my.sharepoint.com/personal/fortiz_bekafinance_com/Documents/Escritorio/Abanca/Microsoft-Power-BI-Storytelling.pptx?web=1" download><img src="https://static.vecteezy.com/system/resources/previews/001/187/075/non_2x/download-png.png"></a></h2>
             <div id="iframeContainer">
                 <iframe title="Cover Pool - Quarterly Information"
-                        src="https://app.powerbi.com/reportEmbed?reportId=81ee266a-2799-4577-bba8-8f96aa531bdf&autoAuth=true&ctid=2788b953-1971-4b82-9986-b668acbd5846"
+                        src="https://app.powerbi.com/view?r=eyJrIjoiZmVlYTY3OWMtNjE3MC00MWE1LWFjZGQtZTUwOGVlMDgxYWZkIiwidCI6ImJjZDI3MDFjLWFhOWItNGQxMi1iYTIwLWYzZTNiODMwNzBjMSIsImMiOjh9"
                         frameborder="0"
                         allowFullScreen="true">
                 </iframe>
@@ -126,7 +126,7 @@
             <h2 class="presentation-title">Cover Pool Monthly Information<a class="download-button" href="https://acgalacapital-my.sharepoint.com/personal/fortiz_bekafinance_com/Documents/Escritorio/Abanca/Microsoft-Power-BI-Storytelling.pptx?web=1" download><img src="https://static.vecteezy.com/system/resources/previews/001/187/075/non_2x/download-png.png"></a></h2>
             <div id="iframeContainer">
                 <iframe title="Cover Pool - Monthly Information"
-                        src="https://app.powerbi.com/reportEmbed?reportId=0fc44c3d-8e91-4312-8000-b10d3dc820bd&autoAuth=true&ctid=2788b953-1971-4b82-9986-b668acbd5846"
+                        src="https://app.powerbi.com/view?r=eyJrIjoiNDNiMjNkN2MtYzgzYS00YmE3LWJiYmItNzdlYWI4Yjk1YmJiIiwidCI6ImJjZDI3MDFjLWFhOWItNGQxMi1iYTIwLWYzZTNiODMwNzBjMSIsImMiOjh9"
                         frameborder="0"
                         allowFullScreen="true">
                 </iframe>
