--- a/victroriafidel.html
+++ b/victroriafidel.html
@@ -120,9 +120,9 @@
 	<a href="#" class="menu-close" rel="nofollow" title="Close Menu"></a>
 	<ul class="level-1">
 		<li class="wnd-active wnd-homepage">
-			<a class="menu-item" href="/home/"><span class="menu-item-text">Inicio</span></a>
+			<a class="menu-item" href="https://franciscoortizb.github.io/franciscoortizb/victroriafidel.html"><span class="menu-item-text">Inicio</span></a>
 		</li><li>
-			<a class="menu-item" href="/nuestra-aventura/"><span class="menu-item-text">Nuestra aventura</span></a>
+			<a class="menu-item" href="https://franciscoortizb.github.io/franciscoortizb/nuestra-aventura.html"><span class="menu-item-text">Nuestra aventura</span></a>
 		</li><li class="overflowed" style="">
 			<a class="menu-item" href="/preguntas-frecuentes/"><span class="menu-item-text">Preguntas frecuentes</span></a>	
 		</li><li class="overflowed" style="">
