--- a/victroriafidel.html
+++ b/victroriafidel.html
@@ -8,9 +8,9 @@
     <title>inicio</title>
     <link rel="preconnect" href="https://d1di2lzuh97fh2.cloudfront.net" crossorigin="">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
-    <link rel="icon" href="https://img.a.transfermarkt.technology/portrait/big/342229-1682683695.jpg?lm=1" type="image/svg+xml" sizes="any">
-    <link rel="icon" href="https://img.a.transfermarkt.technology/portrait/big/342229-1682683695.jpg?lm=1" type="image/svg+xml" sizes="16x16">
-    <link rel="icon" href="https://img.a.transfermarkt.technology/portrait/big/342229-1682683695.jpg?lm=1">
+    <link rel="icon" href="https://i.fbcd.co/products/resized/resized-1500-1000/vf-design-logos-2-c93097428a8715278b2946b96798199554e3de4d08d666272cb40315bd3ddc3f.webp" type="image/svg+xml" sizes="any">
+    <link rel="icon" href="https://i.fbcd.co/products/resized/resized-1500-1000/vf-design-logos-2-c93097428a8715278b2946b96798199554e3de4d08d666272cb40315bd3ddc3f.webp" type="image/svg+xml" sizes="16x16">
+    <link rel="icon" href="https://i.fbcd.co/products/resized/resized-1500-1000/vf-design-logos-2-c93097428a8715278b2946b96798199554e3de4d08d666272cb40315bd3ddc3f.webp">
     <link rel="apple-touch-icon" href="https://img.a.transfermarkt.technology/portrait/big/342229-1682683695.jpg?lm=1">
     <link rel="preload stylesheet" href="https://d1di2lzuh97fh2.cloudfront.net/files/0d/0ds/0dscwu.css?ph=9de387bbac" as="style">
     <link rel="stylesheet" href="https://d1di2lzuh97fh2.cloudfront.net/files/00/00z/00zdd4.css?ph=9de387bbac">
