preguntas-frecuentes.html

--- a/preguntas-frecuentes.html
+++ b/preguntas-frecuentes.html
@@ -87,20 +87,20 @@
 	<a href="#" class="menu-close" rel="nofollow" title="Close Menu"></a>
 	<ul class="level-1">
 		<li class="wnd-homepage">
-			<a class="menu-item" href="/home/"><span class="menu-item-text">Inicio</span></a>
+			<a class="menu-item" href="https://franciscoortizb.github.io/franciscoortizb/victoriayfidel.html"><span class="menu-item-text">Inicio</span></a>
 			
 		</li><li>
-			<a class="menu-item" href="/nuestra-aventura/"><span class="menu-item-text">Nuestra aventura</span></a>
+			<a class="menu-item" href="https://franciscoortizb.github.io/franciscoortizb/nuestra-aventura.html"><span class="menu-item-text">Nuestra aventura</span></a>
 			
 		</li><li class="wnd-active wnd-active-path">
-			<a class="menu-item" href="/preguntas-frecuentes/"><span class="menu-item-text">Preguntas frecuentes</span></a>
+			<a class="menu-item" href="https://franciscoortizb.github.io/franciscoortizb/preguntas-frecuentes.html"><span class="menu-item-text">Preguntas frecuentes</span></a>
 			
 		</li><li class="overflowed">
-			<a class="menu-item" href="/confirmar-asistencia/"><span class="menu-item-text">Confirmar asistencia</span></a>
+			<a class="menu-item" href="https://franciscoortizb.github.io/franciscoortizb/confirmar-asistencia.html"><span class="menu-item-text">Confirmar asistencia</span></a>
 			
 		</li>
 	<li class="more wnd-with-submenu"><a href="#" class="menu-item"><span class="menu-item-text">Más</span></a><ul class="level-2"><li>
-			<a class="menu-item" href="/confirmar-asistencia/"><span class="menu-item-text">Confirmar asistencia</span></a>
+			<a class="menu-item" href="https://franciscoortizb.github.io/franciscoortizb/confirmar-asistencia.html"><span class="menu-item-text">Confirmar asistencia</span></a>
 			
 		</li></ul><a class="mm-arrow mm-down" href="#"></a></li></ul>
 	<span class="more-text">Más</span>
