--- a/victoriayfidel.html
+++ b/victoriayfidel.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
     <meta name="msapplication-tap-highlight" content="no">
-    <title>inicio</title>
+    <title>Victoria & Fidel</title>
     <link rel="preconnect" href="https://d1di2lzuh97fh2.cloudfront.net" crossorigin="">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
     <link rel="icon" href="https://i.fbcd.co/products/resized/resized-1500-1000/vf-design-logos-2-c93097428a8715278b2946b96798199554e3de4d08d666272cb40315bd3ddc3f.webp" type="image/svg+xml" sizes="any">
