--- a/victoriayfidel.html
+++ b/victoriayfidel.html
@@ -182,7 +182,38 @@
 			<span class="b-btn-t">Confirmar asistencia</span>
 		</a>
 	</div>
-<script>(function(d, s, id) { var js, pjs = d.getElementsByTagName(s)[0]; if (d.getElementById(id)) return; js = d.createElement(s); js.id = id; js.src = "//www.tickcounter.com/static/js/loader.js"; pjs.parentNode.insertBefore(js, pjs); }(document, "script", "tickcounter-sdk"));</script><a data-type="countdown" data-id="4376355" class="tickcounter" style="display:block; left:0; width:60%; height:20; position:relative; padding-bottom:25%; margin:20;" title="Boda" href="//www.tickcounter.com/">Boda</a>
+<head>
+<style>
+  body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+  }
+  
+  .tickcounter {
+    display: block;
+    width: 40%; /* Ajusta el ancho deseado */
+    height: auto;
+    margin: 20px;
+    text-align: center;
+  }
+</style>
+</head>
+<body>
+<script>
+  (function(d, s, id) {
+    var js, pjs = d.getElementsByTagName(s)[0];
+    if (d.getElementById(id)) return;
+    js = d.createElement(s); js.id = id;
+    js.src = "//www.tickcounter.com/static/js/loader.js";
+    pjs.parentNode.insertBefore(js, pjs);
+  }(document, "script", "tickcounter-sdk"));
+</script>
+<a data-type="countdown" data-id="4376355" class="tickcounter" title="Boda" href="//www.tickcounter.com/">Boda</a>
+
+	
 </div><div class="b b-s b-hr-line line-min">
 	<hr class="line-style line-color">
 </div><div class="cw cf">
