--- a/victoriayfidel.html
+++ b/victoriayfidel.html
@@ -275,7 +275,7 @@
 					<div class="s-f-l-c s-f-l-c-first">
 						<div class="s-f-cr"><span class="it b link">
 	<span class="it-c"><font class="wnd-font-size-110"><font class="wnd-font-size-120">Victoria &amp;&nbsp;Fidel<br></font><em>14 septiembre 2024&nbsp;</em></font></span>
-<script>(function(d, s, id) { var js, pjs = d.getElementsByTagName(s)[0]; if (d.getElementById(id)) return; js = d.createElement(s); js.id = id; js.src = "//www.tickcounter.com/static/js/loader.js"; pjs.parentNode.insertBefore(js, pjs); }(document, "script", "tickcounter-sdk"));</script><a data-type="countdown" data-id="4376355" class="tickcounter" style="display:block; left:0; width:17%; height:1px; position:relative; padding-bottom:4%; margin:0px auto 10px; margin-bottom: 20px; margin-top: -10px;" title="Boda" href="//www.tickcounter.com/">Boda</a>
+<script>(function(d, s, id) { var js, pjs = d.getElementsByTagName(s)[0]; if (d.getElementById(id)) return; js = d.createElement(s); js.id = id; js.src = "//www.tickcounter.com/static/js/loader.js"; pjs.parentNode.insertBefore(js, pjs); }(document, "script", "tickcounter-sdk"));</script><a data-type="countdown" data-id="4376355" class="tickcounter" style="display:block; left:0; width:17%; height:1px; position:relative; padding-bottom:4%; margin:0px auto 10px; margin-bottom: 20px;" title="Boda" href="//www.tickcounter.com/">Boda</a>
 
 </section></div>
 </div>
