--- a/victoriayfidel.html
+++ b/victoriayfidel.html
@@ -261,8 +261,9 @@
 </section></div>
 </div>
         </main>
-	<script>(function(d, s, id) { var js, pjs = d.getElementsByTagName(s)[0]; if (d.getElementById(id)) return; js = d.createElement(s); js.id = id; js.src = "//www.tickcounter.com/static/js/loader.js"; pjs.parentNode.insertBefore(js, pjs); }(document, "script", "tickcounter-sdk"));</script><a data-type="countdown" data-id="4376355" class="tickcounter" style="display:block; left:0; width:17%; height:1px; position:relative; padding-bottom:4%; margin:0px auto 10px; margin-bottom: 20px;" title="Boda" href="//www.tickcounter.com/">Boda</a>
-        <footer class="l-f cf">
+	<script>(function(d, s, id) { var js, pjs = d.getElementsByTagName(s)[0]; if (d.getElementById(id)) return; js = d.createElement(s); js.id = id; js.src = "//www.tickcounter.com/static/js/loader.js"; pjs.parentNode.insertBefore(js, pjs); }(document, "script", "tickcounter-sdk"));</script>
+    	<a data-type="countdown" data-id="4376355" class="tickcounter" style="display: block; width: 20%; padding-bottom: 20vh; margin: 0 auto 10px; margin-bottom: 20px;" title="Boda" href="//www.tickcounter.com/">Boda</a>
+	<footer class="l-f cf">
             <div class="sw cf">
 	<div class="sw-c cf"><section data-wn-border-element="s-f-border" class="s s-f s-f-basic s-f-simple sc-w   wnd-w-wider wnd-s-high">
 	<div class="s-w">
