--- a/covered.html
+++ b/covered.html
@@ -111,7 +111,7 @@
         </div>
 
         <!-- Contenedor para Abanca Corporativo Completo Quarter -->
-        <div id="quarterlyContainer" style="display: none;">
+        <div id="quarterlyContainer" style="display: none; padding-bottom: 20px;">
             <h2 class="presentation-title">Cover Pool Quarterly Information<a class="download-button" href="https://acgalacapital-my.sharepoint.com/:p:/g/personal/fortiz_bekafinance_com/EYlg4TyO6z5LthluqStZ2t4Blh87eGgCCP0Q_TBPmEILXQ?e=cfZdg0" download><img src="https://static.vecteezy.com/system/resources/previews/001/187/075/non_2x/download-png.png"></a></h2>
             <div id="iframeContainer">
                 <iframe title="Cover Pool - Quarterly Information"
